--- a/client/index.html
+++ b/client/index.html
@@ -7,9 +7,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="/socket.io/socket.io.js"></script>
     <script src="main.js"></script>
+    
+    <style>
+        #messages{
+            width: 95%;
+            max-width: 400px;
+            height: 350px;
+            overflow-y: scroll;
+            border: 1px solid #eee;
+            box-shadow: 0px 0px 20px #ccc inset;
+        }
+        
+        .message{
+            margin: 20px;
+            padding: 5px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+            background: white;
+        }
+    </style>
   </head>
   <body>
     <h1>Chat Socket IO & Node.js</h1>
     <div id="messages"></div>
+    <form onsubmit="return addMessage(this);">
+        <input id="nickname" type="text" placeholder="Nickname...">
+        <textarea id="text" placeholder="Mensaje..."></textarea>
+        <input type="submit" value="Enviar">
+    </form>
   </body>
 </html>
